# rust_tip

./: Cargo.toml  README.md
migrations/: 202601080001_create_indicators.sql  20260113020921_add_source_column.sql
resources/: ip-blocklist.txt
src/: db.rs  ingest.rs  main.rs  models.rs  utils.rs
templates/: index.html
tests/: integration_tests.rs
