[package]
name = "rust-tip"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
uuid = { version = "1.11", features = ["v4"] }